src/app.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@theme {
	--color-primary: #0d59f2;
	--color-background-light: #f5f6f8;
	--color-background-dark: #101622;
	--font-display: 'Inter', sans-serif;
	--radius: 0.25rem;
	--radius-lg: 0.5rem;
	--radius-xl: 0.75rem;
	--radius-full: 9999px;
}

@custom-variant dark (&:where(.dark, .dark *));

.material-symbols-outlined {
	visibility: hidden;
}
.fonts-loaded .material-symbols-outlined {
	visibility: visible;
}

